force-app/main/default/objects/Outage_Type_Mapping__c/Outage_Type_Mapping__c.object-meta.xml
<CustomObject>
    <description>Mappings to store default outage types both for normal and exceptional outage types.</description>
    <label>Outage Type Mapping</label>
    <nameField>
        <displayFormat>OutageMapNum-{00000}</displayFormat>
        <label>Outage Type Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outage Type Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>