force-app/main/default/objects/Outage_Type_Mapping__c/fields/Default_Outage_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Outage_Type__c</fullName>
    <description>Default outage types for systems in level 2 and 3.</description>
    <label>Default Outage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Unplanned</fullName>
            </value>
            <value>
                <fullName>Degraded</fullName>
            </value>
            <value>
                <fullName>No Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>