force-app/main/default/objects/Outage_Type_Mapping__c/fields/Level0_Outage_Type__c.field-meta.xml
<CustomField>
    <fullName>Level0_Outage_Type__c</fullName>
    <description>Header Outage type to determine the default outage type</description>
    <label>Level0 Outage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned Downtime</fullName>
            </value>
            <value>
                <fullName>Unplanned Downtime</fullName>
            </value>
            <value>
                <fullName>Degraded Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>