force-app/main/default/objects/Outage_Type_Mapping__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to System Master</description>
    <label>System</label>
    <referenceTo>System_Master__c</referenceTo>
    <relationshipLabel>Outage Type Mappings</relationshipLabel>
    <relationshipName>Outage_Type_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>