force-app/main/default/objects/Outage_Type_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Default_Outage_Type__c</columns>
    <columns>Level0_Outage_Type__c</columns>
    <columns>System__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>